WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311700
Range.extractContents should not extract out-of-bounds nodes if end container is removed during extraction
https://bugs.webkit.org/show_bug.cgi?id=311700
Summary
Range.extractContents should not extract out-of-bounds nodes if end container...
Chris Dumez
Reported
2026-04-07 20:12:15 PDT
Range.extractContents should not extract out-of-bounds nodes if end container is removed during extraction.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-07 20:15:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62245
EWS
Comment 2
2026-04-08 03:07:30 PDT
Committed
310770@main
(9dac73538145): <
https://commits.webkit.org/310770@main
> Reviewed commits have been landed. Closing PR #62245 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-08 03:08:13 PDT
<
rdar://problem/174307275
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug