Range.extractContents should not extract out-of-bounds nodes if end container is removed during extraction https://bugs.webkit.org/show_bug.cgi?id=311700

Reviewed by Anne van Kesteren.

When Range::extractContents() processes nodes, removing an iframe can fire a synchronous
unload event. If that event handler removes the Range's end container from the DOM, the
extraction loop loses its end boundary (processEnd becomes null) and continues extracting
all remaining siblings of the common root, including nodes that were outside the original range.

Fix this by skipping the middle node processing when processEnd is null and the original
end container is no longer a descendant of the common root.

Test: imported/w3c/web-platform-tests/dom/ranges/Range-extractContents-dynamic-end.html
This test was contributed upstream by Blink. It fails in shipping Safari but passes with
this fix. This is thus aligning our behavior with Blink.

* LayoutTests/imported/w3c/web-platform-tests/dom/ranges/Range-extractContents-dynamic-end-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/dom/ranges/Range-extractContents-dynamic-end.html: Added.
* Source/WebCore/dom/Range.cpp:
(WebCore::Range::processContents):

Canonical link: https://commits.webkit.org/310770@main